// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler: transform component slots dynamically named slots 1`] = `
"const { toDisplayString: _toDisplayString, resolveComponent: _resolveComponent, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  const _component_Comp = _resolveComponent(\\"Comp\\")

  return (_openBlock(), _createBlock(_component_Comp, null, {
    [_ctx.one]: ({ foo }) => [_toDisplayString(foo), _toDisplayString(_ctx.bar)],
    [_ctx.two]: ({ bar }) => [_toDisplayString(_ctx.foo), _toDisplayString(bar)],
    _compiled: true
  }, 512 /* DYNAMIC_SLOTS */))
}"
`;

exports[`compiler: transform component slots implicit default slot 1`] = `
"const { createVNode: _createVNode, resolveComponent: _resolveComponent, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  const _component_Comp = _resolveComponent(\\"Comp\\")

  return (_openBlock(), _createBlock(_component_Comp, null, {
    default: () => [
      _createVNode(\\"div\\")
    ],
    _compiled: true
  }))
}"
`;

exports[`compiler: transform component slots named slot with v-for w/ prefixIdentifiers: true 1`] = `
"const { toDisplayString: _toDisplayString, resolveComponent: _resolveComponent, renderList: _renderList, createSlots: _createSlots, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  const _component_Comp = _resolveComponent(\\"Comp\\")

  return (_openBlock(), _createBlock(_component_Comp, null, _createSlots({ _compiled: true }, [
    _renderList(_ctx.list, (name) => {
      return {
        name: name,
        fn: () => [_toDisplayString(name)]
      }
    })
  ]), 512 /* DYNAMIC_SLOTS */))
}"
`;

exports[`compiler: transform component slots named slot with v-if + prefixIdentifiers: true 1`] = `
"const { toDisplayString: _toDisplayString, resolveComponent: _resolveComponent, createSlots: _createSlots, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  const _component_Comp = _resolveComponent(\\"Comp\\")

  return (_openBlock(), _createBlock(_component_Comp, null, _createSlots({ _compiled: true }, [
    (_ctx.ok)
      ? {
          name: \\"one\\",
          fn: (props) => [_toDisplayString(props)]
        }
      : undefined
  ]), 512 /* DYNAMIC_SLOTS */))
}"
`;

exports[`compiler: transform component slots named slot with v-if + v-else-if + v-else 1`] = `
"const _Vue = Vue

return function render(_ctx, _cache) {
  with (this) {
    const { resolveComponent: _resolveComponent, createSlots: _createSlots, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = _Vue

    const _component_Comp = _resolveComponent(\\"Comp\\")

    return (_openBlock(), _createBlock(_component_Comp, null, _createSlots({ _compiled: true }, [
      ok
        ? {
            name: \\"one\\",
            fn: () => [\\"foo\\"]
          }
        : orNot
          ? {
              name: \\"two\\",
              fn: (props) => [\\"bar\\"]
            }
          : {
              name: \\"one\\",
              fn: () => [\\"baz\\"]
            }
    ]), 512 /* DYNAMIC_SLOTS */))
  }
}"
`;

exports[`compiler: transform component slots named slot with v-if 1`] = `
"const _Vue = Vue

return function render(_ctx, _cache) {
  with (this) {
    const { resolveComponent: _resolveComponent, createSlots: _createSlots, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = _Vue

    const _component_Comp = _resolveComponent(\\"Comp\\")

    return (_openBlock(), _createBlock(_component_Comp, null, _createSlots({ _compiled: true }, [
      ok
        ? {
            name: \\"one\\",
            fn: () => [\\"hello\\"]
          }
        : undefined
    ]), 512 /* DYNAMIC_SLOTS */))
  }
}"
`;

exports[`compiler: transform component slots named slots 1`] = `
"const { toDisplayString: _toDisplayString, resolveComponent: _resolveComponent, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  const _component_Comp = _resolveComponent(\\"Comp\\")

  return (_openBlock(), _createBlock(_component_Comp, null, {
    one: ({ foo }) => [_toDisplayString(foo), _toDisplayString(_ctx.bar)],
    two: ({ bar }) => [_toDisplayString(_ctx.foo), _toDisplayString(bar)],
    _compiled: true
  }))
}"
`;

exports[`compiler: transform component slots named slots w/ implicit default slot 1`] = `
"const _Vue = Vue

return function render(_ctx, _cache) {
  with (this) {
    const { createVNode: _createVNode, resolveComponent: _resolveComponent, openBlock: _openBlock, createBlock: _createBlock } = _Vue

    const _component_Comp = _resolveComponent(\\"Comp\\")

    return (_openBlock(), _createBlock(_component_Comp, null, {
      one: () => [\\"foo\\"],
      default: () => [
        \\"bar\\",
        _createVNode(\\"span\\")
      ],
      _compiled: true
    }))
  }
}"
`;

exports[`compiler: transform component slots nested slots scoping 1`] = `
"const { toDisplayString: _toDisplayString, resolveComponent: _resolveComponent, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  const _component_Inner = _resolveComponent(\\"Inner\\")
  const _component_Comp = _resolveComponent(\\"Comp\\")

  return (_openBlock(), _createBlock(_component_Comp, null, {
    default: ({ foo }) => [
      _createVNode(_component_Inner, null, {
        default: ({ bar }) => [_toDisplayString(foo), _toDisplayString(bar), _toDisplayString(_ctx.baz)],
        _compiled: true
      }, 512 /* DYNAMIC_SLOTS */),
      \\" \\",
      _toDisplayString(foo),
      _toDisplayString(_ctx.bar),
      _toDisplayString(_ctx.baz)
    ],
    _compiled: true
  }))
}"
`;

exports[`compiler: transform component slots on-component default slot 1`] = `
"const { toDisplayString: _toDisplayString, resolveComponent: _resolveComponent, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  const _component_Comp = _resolveComponent(\\"Comp\\")

  return (_openBlock(), _createBlock(_component_Comp, null, {
    default: ({ foo }) => [_toDisplayString(foo), _toDisplayString(_ctx.bar)],
    _compiled: true
  }))
}"
`;
